--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greenden</title>
+    <link rel="icon" href="plant.png" type="image/png">
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <!-- Font Awesome -->
@@ -14,7 +15,7 @@
     <style>
         /* Header and Footer Styling */
         nav {
-            background: linear-gradient(90deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+            background: linear-gradient(90deg, rgb(11, 185, 188) 0%, rgba(253, 187, 45, 1) 100%);
         }
 
         footer {
@@ -70,13 +71,13 @@
         </svg>
         <ul class="flex gap-5 text-grey-600 hidden md:flex">
             <li>
-                <a class="hover:underline hover:text-white" href="index.html">Home</a>
+                <a class="text-green-950 hover:underline hover:text-white" href="index.html">Home</a>
             </li>
             <li>
-                <a class="hover:underline hover:text-white" href="product.html">Products</a>
+                <a class="text-green-950 hover:underline hover:text-white" href="product.html">Products</a>
             </li>
             <li>
-                <a class="hover:underline hover:text-white" href="contact.html">Contact Us</a>
+                <a class="text-green-950 hover:underline hover:text-white" href="contact.html">Contact Us</a>
             </li>
         </ul>
     </nav>
@@ -87,7 +88,7 @@
 
             <div class="flex justify-center">
                 <div class="text-center md:max-w-xl lg:max-w-3xl">
-                    <h2 class="mb-12 px-6 text-3xl font-bold">
+                    <h2 class="mb-12 px-6 text-3xl text-green-950 font-bold">
                         Contact us
                     </h2>
                 </div>
@@ -98,26 +99,26 @@
                 <form class="mb-12 w-full shrink-0 grow-0 basis-auto md:px-3 lg:mb-0 lg:w-5/12 lg:px-6">
 
                     <div class="mb-3 w-full">
-                        <label class="block font-medium mb-[2px] text-teal-700" htmlFor="exampleInput90">
+                        <label class="block font-medium mb-[2px] text-green-700" htmlFor="exampleInput90">
                             Name
                         </label>
-                        <input type="text" class="px-2 py-2 border w-full outline-none rounded-md" id="exampleInput90"
+                        <input type="text" class="text-green-700 px-2 py-2 border w-full outline-none rounded-md" id="exampleInput90"
                             placeholder="Name" />
                     </div>
 
                     <div class="mb-3 w-full">
-                        <label class="block font-medium mb-[2px] text-teal-700" htmlFor="exampleInput90">
+                        <label class="block font-medium mb-[2px] text-green-700" htmlFor="exampleInput90">
                             Email
                         </label>
-                        <input type="email" class="px-2 py-2 border w-full outline-none rounded-md" id="exampleInput90"
+                        <input type="email" class="text-green-700 px-2 py-2 border w-full outline-none rounded-md" id="exampleInput90"
                             placeholder="Enter your email address" />
                     </div>
 
                     <div class="mb-3 w-full">
-                        <label class="block font-medium mb-[2px] text-teal-700" htmlFor="exampleInput90">
+                        <label class="block font-medium mb-[2px] text-green-700" htmlFor="exampleInput90">
                             Message
                         </label>
-                        <textarea class="px-2 py-2 border rounded-[5px] w-full outline-none" name="" id=""
+                        <textarea class="text-green-700 px-2 py-2 border rounded-[5px] w-full outline-none" name="" id=""
                             placeholder="Your Message..."></textarea>
                     </div>
 
@@ -133,7 +134,7 @@
                         <div class="mb-12 w-full shrink-0 grow-0 basis-auto md:w-6/12 md:px-3 lg:px-6">
                             <div class="flex items-start">
                                 <div class="shrink-0">
-                                    <div class="inline-block rounded-md bg-teal-400-100 p-4 text-teal-700">
+                                    <div class="inline-block rounded-md bg-teal-400-100 p-4 text-green-700">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                             stroke-width="2" stroke="currentColor" class="h-6 w-6">
                                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -142,13 +143,13 @@
                                     </div>
                                 </div>
                                 <div class="ml-6 grow">
-                                    <p class="mb-2 font-bold">
+                                    <p class="mb-2 text-green-800 font-bold">
                                         Technical support
                                     </p>
-                                    <p class="text-neutral-500 ">
+                                    <p class="text-green-700 ">
                                         Greenden@gmail.com
                                     </p>
-                                    <p class="text-neutral-500 ">
+                                    <p class="text-green-700 ">
                                         +973 234-567-89
                                     </p>
                                 </div>
@@ -157,7 +158,7 @@
                         <div class="mb-12 w-full shrink-0 grow-0 basis-auto md:w-6/12 md:px-3 lg:px-6">
                             <div class="flex items-start">
                                 <div class="shrink-0">
-                                    <div class="inline-block rounded-md bg-teal-400-100 p-4 text-teal-700">
+                                    <div class="inline-block rounded-md bg-teal-400-100 p-4 text-green-700">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                             stroke-width="2" stroke="currentColor" class="h-6 w-6">
                                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -166,13 +167,13 @@
                                     </div>
                                 </div>
                                 <div class="ml-6 grow">
-                                    <p class="mb-2 font-bold ">
+                                    <p class="mb-2 text-green-800 font-bold ">
                                         Sales questions
                                     </p>
-                                    <p class="text-neutral-500 ">
+                                    <p class="text-green-700 ">
                                         salesgreenden@gmail.com
                                     </p>
-                                    <p class="text-neutral-500 ">
+                                    <p class="text-green-700 ">
                                         +973 234-567-83
                                     </p>
                                 </div>
@@ -181,7 +182,7 @@
                         <div class="mb-12 w-full shrink-0 grow-0 basis-auto md:w-6/12 md:px-3 lg:px-6">
                             <div class="align-start flex">
                                 <div class="shrink-0">
-                                    <div class="inline-block rounded-md bg-teal-400-100 p-4 text-teal-700">
+                                    <div class="inline-block rounded-md bg-teal-400-100 p-4 text-green-700">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                             stroke-width="2" stroke="currentColor" class="h-6 w-6">
                                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -190,11 +191,11 @@
                                     </div>
                                 </div>
                                 <div class="ml-6 grow">
-                                    <p class="mb-2 font-bold ">Press</p>
-                                    <p class="text-neutral-500 ">
+                                    <p class="mb-2 text-green-800  font-bold ">Press</p>
+                                    <p class="text-green-700 ">
                                         pressgreen@gmail.com
                                     </p>
-                                    <p class="text-neutral-500 ">
+                                    <p class="text-green-700 ">
                                         +973 234-567-86
                                     </p>
                                 </div>
@@ -203,7 +204,7 @@
                         <div class="mb-12 w-full shrink-0 grow-0 basis-auto md:w-6/12 md:px-3 lg:px-6">
                             <div class="align-start flex">
                                 <div class="shrink-0">
-                                    <div class="inline-block rounded-md bg-teal-400-100 p-4 text-teal-700">
+                                    <div class="inline-block rounded-md bg-teal-400-100 p-4 text-green-700">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                             stroke-width="2" stroke="currentColor" class="h-6 w-6">
                                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -212,13 +213,13 @@
                                     </div>
                                 </div>
                                 <div class="ml-6 grow">
-                                    <p class="mb-2 font-bold">
+                                    <p class="mb-2 text-green-800  font-bold">
                                         Bug report
                                     </p>
-                                    <p class="text-neutral-500 ">
+                                    <p class="text-green-700 ">
                                         bugsgdn@gamil.com
                                     </p>
-                                    <p class="text-neutral-500">
+                                    <p class="text-green-700">
                                         +973 234-567-81
                                     </p>
                                 </div>
@@ -258,8 +259,8 @@
         <div class="flex flex-col items-center gap-3 mt-5 text-sm md:hidden">
             <!-- Hidden on Medium and Larger Screens -->
             <a href="index.html" class="hover:text-yellow-300 transition duration-300">Home</a>
-            <a href="contact.html" class="hover:text-yellow-300 transition duration-300">Contact Us</a>
             <a href="product.html" class="hover:text-yellow-300 transition duration-300">Products</a>
+            <a href="contact.html" class="hover:text-yellow-300 transition duration-300">Contact Us</a>
         </div>
 
         <p class="text-sm mt-3">© 2024 Greenday.com. All rights reserved.</p>
