--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
         /* Header and Footer Styling */
         nav {
-            background: linear-gradient(90deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+            background: linear-gradient(90deg, rgb(11, 185, 188) 0%, rgba(253, 187, 45, 1) 100%);
         }
 
         footer {
@@ -71,21 +71,22 @@
         </svg>
         <ul class="flex gap-5 text-grey-600 hidden md:flex">
             <li>
-                <a class="hover:underline hover:text-white" href="index.html">Home</a>
+                <a class="text-green-950 hover:underline hover:text-white" href="index.html">Home</a>
             </li>
             <li>
-                <a class="hover:underline hover:text-white" href="product.html">Products</a>
+                <a class="text-green-950 hover:underline hover:text-white" href="product.html">Products</a>
             </li>
             <li>
-                <a class="hover:underline hover:text-white" href="contact.html">Contact Us</a>
+                <a class="text-green-950 hover:underline hover:text-white" href="contact.html">Contact Us</a>
             </li>
         </ul>
     </nav>
     <!-- Header Section -->
-    <section class="bg-green-200 p-4 md:p-10 flex justify-center">
+    <section class="bg-green-100 p-4 md:p-10 flex justify-center">
         <div>
-            <p class="mb-4 text-lg font-medium">We offer you a wide range of Artificial and Natural Flowers</p>
-            <h2 class="font-bold text-3xl md:text-4xl mb-5">Plants for your Interior</h2>
+            <p class="mb-4 text-lg  text-green-900 font-medium">We offer you a wide range of Artificial and Natural
+                Flowers</p>
+            <h2 class="font-bold text-3xl  text-green-900 md:text-4xl mb-5">Plants for your Interior</h2>
             <div>
                 <button class="bg-black rounded p-2 text-white">Shop Now <i class="fa-sharp fa-solid fa-cart-shopping"
                         style="color: #ebfeff;"></i></button>
@@ -93,87 +94,98 @@
                     class="border border-black rounded p-2 hover:bg-black hover:text-white transition-all duration-300">Watch
                     Video <i class="fa-solid fa-video"></i></button>
             </div>
-            <p class="mt-5 text-gray-700">160+ Plants Species | 100+ Clients</p>
+            <p class="mt-5 text-green-700">160+ Plants Species | 100+ Clients</p>
         </div>
         <div class="hidden md:block p-8">
             <img src="plant pot.png" alt="Header-image" class="w-60">
         </div>
     </section>
-    <!--About Us Section-->
-    <section class="bg-gray-100 p-6 text-center">
-        <h1 class="text-3xl font-bold mt-5 text-gray-800">About Us</h1>
-        <p class="text-gray-600 mt-3">This site is for those who admire the beauty and harmony of nature.</p>
+    <!-- About Us Section -->
+    <section
+        class="bg-gradient-to-r from-green-200 via-green-300 to-green-500 p-6 text-center rounded-xl shadow-lg mt-10 mb-7">
+        <h1 class="text-4xl font-extrabold mt-5 text-green-900 tracking-wide">About Us</h1>
+        <p class="text-green-800 mt-3">This site is for those who admire the beauty and harmony of nature.
+        </p>
 
-        <div class="md:flex flex-wrap justify-around mt-8">
-            <div class="bg-white border border-gray-200 p-6 m-6 rounded-lg w-full max-w-xs mx-auto flex-1 shadow-md">
+        <div class="md:flex flex-wrap justify-around mt-10 gap-6">
+            <div
+                class="bg-white hover:bg-green-50 border border-gray-200 p-6 m-6 rounded-lg w-full max-w-xs mx-auto flex-1 shadow-md hover:shadow-xl transition-all duration-300 ease-in-out">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="w-12 mx-auto mb-4 text-green-600">
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
                 </svg>
-                <h2 class="text-xl font-semibold text-gray-700">Large Assortment</h2>
-                <p class="text-justify text-gray-500 mt-2">Discover a world of greenery! From classic houseplants to
+                <h2 class="text-xl font-bold text-green-800">Large Assortment</h2>
+                <p class="text-justify text-green-800 mt-2">Discover a world of greenery! From classic houseplants to
                     unique
                     botanical treasures, we have something to suit every taste and space.</p>
             </div>
 
-            <div class="bg-white border border-gray-200 p-6 m-6 rounded-lg w-full max-w-xs mx-auto flex-1 shadow-md">
+            <div
+                class="bg-white hover:bg-green-50 border border-gray-200 p-6 m-6 rounded-lg w-full max-w-xs mx-auto flex-1 shadow-md hover:shadow-xl transition-all duration-300 ease-in-out">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="w-12 mx-auto mb-4 text-green-600">
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
                 </svg>
-                <h2 class="text-xl font-semibold text-gray-700">Free and Fast Shipping</h2>
-                <p class="text-justify text-gray-500 mt-2">Experience the joy of plant ownership with free and fast
-                    shipping. Find the perfect plant to enhance your space.</p>
+                <h2 class="text-xl font-bold text-green-800">Fast & Free Shipping</h2>
+                <p class="text-justify text-green-800 mt-2">Enjoy the convenience of fast, reliable, and free shipping.
+                    We
+                    ensure your plants arrive in perfect condition, ready to thrive.</p>
             </div>
 
-            <div class="bg-white border border-gray-200 p-6 m-6 rounded-lg w-full max-w-xs mx-auto flex-1 shadow-md">
+            <div
+                class="bg-white hover:bg-green-50 border border-gray-200 p-6 m-6 rounded-lg w-full max-w-xs mx-auto flex-1 shadow-md hover:shadow-xl transition-all duration-300 ease-in-out">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="w-12 mx-auto mb-4 text-green-600">
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
                 </svg>
-                <h2 class="text-xl font-semibold text-gray-700">24/7 Support</h2>
-                <p class="text-justify text-gray-500 mt-2">Get expert assistance anytime! Our team is available 24/7 to
-                    help
-                    you choose the perfect plants.</p>
+                <h2 class="text-xl font-bold text-green-800">24/7 Customer Support</h2>
+                <p class="text-justify text-green-800 mt-2">We’re here to help! Our dedicated customer support team is
+                    available around the clock to assist with any questions or concerns.</p>
             </div>
         </div>
     </section>
-    <!--Best Seller-->
-    <section class="p-4 text-center">
-        <h1 class="font-bold mt-5 text-3xl">Best Seller</h1>
+
+    <!-- Best Seller -->
+    <section class="p-4   text-center rounded-lg shadow-lg">
+        <h1 class="font-bold mt-5 text-4xl text-green-900">🌿 Best Sellers 🌿</h1>
         <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
-            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+            <div
+                class="transition-all duration-300 ease-in-out hover:scale-105 hover:bg-white rounded-lg shadow-lg p-2">
                 <img src="best seller 1.jpg" alt="Best Seller 1 image"
-                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
-                <h1 class="mt-2 font-semibold">Rose Plant</h1>
-                <p class="text-green-600 font-medium">BHD 8.00</p>
+                    class="inline-block w-full h-48 object-cover rounded-2xl hover:shadow-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-lg text-green-800">🌹 Rose Plant</h1>
+                <p class="text-green-700 font-bold text-lg">BHD <span class="text-orange-600">8.00</span></p>
             </div>
-            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+            <div
+                class="transition-all duration-300 ease-in-out hover:scale-105 hover:bg-white rounded-lg shadow-lg p-2">
                 <img src="best seller 2.jpg" alt="Best Seller 2 image"
-                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
-                <h1 class="mt-2 font-semibold">Lily Plant</h1>
-                <p class="text-green-600 font-medium">BHD 5.00</p>
+                    class="inline-block w-full h-48 object-cover rounded-2xl hover:shadow-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-lg text-green-800">🌷 Lily Plant</h1>
+                <p class="text-green-700 font-bold text-lg">BHD <span class="text-orange-600">5.00</span></p>
             </div>
-            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+            <div
+                class="transition-all duration-300 ease-in-out hover:scale-105 hover:bg-white rounded-lg shadow-lg p-2">
                 <img src="best seller 3.jpg" alt="Best Seller 3 image"
-                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
-                <h1 class="mt-2 font-semibold">Jasmine Plant</h1>
-                <p class="text-green-600 font-medium">BHD 8.50</p>
+                    class="inline-block w-full h-48 object-cover rounded-2xl hover:shadow-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-lg text-green-800">🌼 Jasmine Plant</h1>
+                <p class="text-green-700 font-bold text-lg">BHD <span class="text-orange-600">8.50</span></p>
             </div>
-            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+            <div
+                class="transition-all duration-300 ease-in-out hover:scale-105 hover:bg-white rounded-lg shadow-lg p-2">
                 <img src="best seller 4.jpg" alt="Best Seller 4 image"
-                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
-                <h1 class="mt-2 font-semibold">Lavender Plant</h1>
-                <p class="text-green-600 font-medium">BHD 10.00</p>
+                    class="inline-block w-full h-48 object-cover rounded-2xl hover:shadow-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-lg text-green-800">💜 Lavender Plant</h1>
+                <p class="text-green-700 font-bold text-lg">BHD <span class="text-orange-600">10.00</span></p>
             </div>
         </div>
     </section>
+
     <!--Customer Reviews-->
     <section>
-        <h1 class="text-3xl font-bold mt-5 text-center">Customer Reviews</h1>
+        <h1 class="text-3xl text-green-900 font-bold mt-10 text-center">Customer Reviews</h1>
         <div class="grid gap-5 justify-center text-white m-5">
             <div
                 class="bg-gradient-to-r from-green-800 to-green-600 p-5 rounded-lg shadow-lg hover:shadow-2xl transition-shadow duration-300 ease-in-out">
@@ -201,16 +213,20 @@
     </section>
 
     <!--Newsletter-->
-    <section class="text-center bg-gray-100 p-8 mt-10 rounded-lg shadow-lg">
-        <h1 class="text-3xl font-bold text-gray-800">Join Our Newsletter</h1>
-        <p class="text-gray-600 mt-3">Signup for our email newsletter to get exclusive discounts, updates, and more.</p>
-        <div class="mt-5">
-            <input type="text" placeholder="Enter your email"
-                class="border border-gray-400 rounded-md p-3 w-3/4 md:w-1/2 focus:outline-none focus:ring-2 focus:ring-green-500 transition duration-200">
+    <section
+        class="text-center bg-gradient-to-r from-gray-100 to-gray-200 p-10 mt-10 rounded-lg shadow-2xl transform hover:shadow-lg transition-all duration-300 ease-in-out">
+        <h1 class="text-4xl font-extrabold text-green-900">Join Our Newsletter</h1>
+        <p class="text-green-700 mt-4 leading-relaxed max-w-xl mx-auto">Signup for our email newsletter to get exclusive
+            discounts, updates, and more. Stay in the loop and never miss a great deal!</p>
+        <div class="mt-6">
+            <input type="email" placeholder="Enter your email"
+                class="text-green-700 border border-green-400 rounded-full p-4 w-3/4 md:w-1/2 focus:outline-none focus:ring-4 focus:ring-green-500 transition duration-200 shadow-sm">
             <br>
             <button
-                class="bg-green-700 hover:bg-green-800 text-white p-3 rounded-lg mt-3 font-bold transition-all duration-300 transform hover:scale-105">Subscribe</button>
+                class="bg-green-700 hover:bg-green-800 text-white p-4 rounded-full mt-5 font-bold transition-all duration-300 transform hover:scale-110 shadow-lg">Subscribe
+                Now</button>
         </div>
+    </section>
     </section>
 
     <!--Footer-->
@@ -239,8 +255,8 @@
         <div class="flex flex-col items-center gap-3 mt-5 text-sm md:hidden">
             <!-- Hidden on Medium and Larger Screens -->
             <a href="index.html" class="hover:text-yellow-300 transition duration-300">Home</a>
-            <a href="contact.html" class="hover:text-yellow-300 transition duration-300">Contact Us</a>
             <a href="product.html" class="hover:text-yellow-300 transition duration-300">Products</a>
+            <a href="contact.html" class="hover:text-yellow-300 transition duration-300">Contact Us</a>
         </div>
 
         <p class="text-sm mt-3">© 2024 Greenday.com. All rights reserved.</p>
