--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greenden</title>
+    <link rel="icon" href="plant.png" type="image/png">
     <!-- Tailwind CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <!-- Font Awesome -->
@@ -14,7 +15,7 @@
     <style>
         /* Header and Footer Styling */
         nav {
-            background: linear-gradient(90deg, rgba(34, 193, 195, 1) 0%, rgba(253, 187, 45, 1) 100%);
+            background: linear-gradient(90deg, rgb(11, 185, 188) 0%, rgba(253, 187, 45, 1) 100%);
         }
 
         footer {
@@ -70,102 +71,141 @@
         </svg>
         <ul class="flex gap-5 text-grey-600 hidden md:flex">
             <li>
-                <a class="hover:underline hover:text-white" href="index.html">Home</a>
+                <a class="text-green-950 hover:underline hover:text-white" href="index.html">Home</a>
             </li>
             <li>
-                <a class="hover:underline hover:text-white" href="product.html">Products</a>
+                <a class="text-green-950 hover:underline hover:text-white" href="product.html">Products</a>
             </li>
             <li>
-                <a class="hover:underline hover:text-white" href="contact.html">Contact Us</a>
+                <a class="text-green-950 hover:underline hover:text-white" href="contact.html">Contact Us</a>
             </li>
         </ul>
     </nav>
-
     <!--Product-->
     <section class="p-4 text-center">
-        <h1 class="font-bold mt-5 text-3xl">Our Products</h1>
+        <h1 class="font-bold mt-5 text-3xl text-green-800">🌱 Our Products</h1>
 
         <!-- Search Input (inside header) -->
         <input type="text"
             class="border border-gray-300 rounded-full p-3 m-3 shadow-md focus:outline-none focus:ring-2 focus:ring-green-500 transition duration-300"
-            style="width: 45%; position: sticky; top: 0; z-index: 20;"placeholder="Search for a Product...">
+            style="width: 45%; position: sticky; top: 0; z-index: 20;" placeholder="Search for a Product...">
 
         <!-- Product Grid -->
         <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
-
             <!-- Product 1 -->
-            <div
-                class="bg-white p-5 rounded-lg shadow-md hover:shadow-2xl transition transform hover:-translate-y-2 duration-300 cursor-pointer">
-                <img src="best seller 1.jpg" alt="Best Seller 1 image"
-                    class="rounded-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2 cursor-pointer">
-                <h1 class="font-bold text-lg mt-2">Rose Plant</h1>
-                <p class="text-green-600 font-semibold">BHD 8.00</p>
+            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+                <img src="best seller 1.jpg" alt="Rose Plant"
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-green-700 text-center">🌹 Rose Plant</h1>
+                <p class="text-green-600 font-medium text-center">
+                    BHD 8.00
+                </p>
+                <button
+                    class="bg-green-700 hover:bg-green-800 text-white p-2 rounded-lg mt-2 font-bold transition-all duration-300 transform hover:scale-105">
+                    Buy Now
+                </button>
             </div>
 
             <!-- Product 2 -->
-            <div
-                class="bg-white p-5 rounded-lg shadow-md hover:shadow-2xl transition transform hover:-translate-y-2 duration-300 cursor-pointer">
-                <img src="best seller 2.jpg" alt="Best Seller 2 image"
-                    class="rounded-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2 cursor-pointer">
-                <h1 class="font-bold text-lg mt-2">Lily Plant</h1>
-                <p class="text-green-600 font-semibold">BHD 5.00</p>
+            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+                <img src="best seller 2.jpg" alt="Lily Plant"
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-green-700 text-center">🌼 Lily Plant</h1>
+                <p class="text-green-600 font-medium text-center">
+                    BHD 5.00
+                </p>
+                <button
+                    class="bg-green-700 hover:bg-green-800 text-white p-2 rounded-lg mt-2 font-bold transition-all duration-300 transform hover:scale-105">
+                    Buy Now
+                </button>
             </div>
 
             <!-- Product 3 -->
-            <div
-                class="bg-white p-5 rounded-lg shadow-md hover:shadow-2xl transition transform hover:-translate-y-2 duration-300 cursor-pointer">
-                <img src="best seller 3.jpg" alt="Best Seller 3 image"
-                    class="rounded-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2 cursor-pointer">
-                <h1 class="font-bold text-lg mt-2">Jasmine Plant</h1>
-                <p class="text-green-600 font-semibold">BHD 8.50</p>
+            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+                <img src="best seller 3.jpg" alt="Jasmine Plant"
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-green-700 text-center">🌸 Jasmine Plant</h1>
+                <p class="text-green-600 font-medium text-center">
+                    BHD 8.50
+                </p>
+                <button
+                    class="bg-green-700 hover:bg-green-800 text-white p-2 rounded-lg mt-2 font-bold transition-all duration-300 transform hover:scale-105">
+                    Buy Now
+                </button>
             </div>
 
             <!-- Product 4 -->
-            <div
-                class="bg-white p-5 rounded-lg shadow-md hover:shadow-2xl transition transform hover:-translate-y-2 duration-300 cursor-pointer">
-                <img src="best seller 4.jpg" alt="Best Seller 4 image"
-                    class="rounded-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2 cursor-pointer">
-                <h1 class="font-bold text-lg mt-2">Lavendar Plant</h1>
-                <p class="text-green-600 font-semibold">BHD 10.00</p>
+            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+                <img src="best seller 4.jpg" alt="Lavender Plant"
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-green-700 text-center">💐 Lavender Plant</h1>
+                <p class="text-green-600 font-medium text-center">
+                    BHD 10.00
+                </p>
+                <button
+                    class="bg-green-700 hover:bg-green-800 text-white p-2 rounded-lg mt-2 font-bold transition-all duration-300 transform hover:scale-105">
+                    Buy Now
+                </button>
             </div>
 
             <!-- Product 5 -->
-            <div
-                class="bg-white p-5 rounded-lg shadow-md hover:shadow-2xl transition transform hover:-translate-y-2 duration-300 cursor-pointer">
-                <img src="product 1.jpg" alt="Product 1 image"
-                    class="rounded-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2 cursor-pointer">
-                <h1 class="font-bold text-lg mt-2">Money Plant</h1>
-                <p class="text-green-600 font-semibold">BHD 7.50</p>
+            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+                <img src="product 1.jpg" alt="Money Plant"
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-green-700 text-center">💵 Money Plant</h1>
+                <p class="text-green-600 font-medium text-center">
+                    BHD 7.50
+                </p>
+                <button
+                    class="bg-green-700 hover:bg-green-800 text-white p-2 rounded-lg mt-2 font-bold transition-all duration-300 transform hover:scale-105">
+                    Buy Now
+                </button>
             </div>
 
             <!-- Product 6 -->
-            <div
-                class="bg-white p-5 rounded-lg shadow-md hover:shadow-2xl transition transform hover:-translate-y-2 duration-300 cursor-pointer">
-                <img src="product 2.jpg" alt="Best Seller 2 image"
-                    class="rounded-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2 cursor-pointer">
-                <h1 class="font-bold text-lg mt-2">Spider Plant</h1>
-                <p class="text-green-600 font-semibold">BHD 6.00</p>
+            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+                <img src="product 2.jpg" alt="Spider Plant"
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-green-700 text-center">🕸️ Spider Plant</h1>
+                <p class="text-green-600 font-medium text-center">
+                    BHD 6.00
+                </p>
+                <button
+                    class="bg-green-700 hover:bg-green-800 text-white p-2 rounded-lg mt-2 font-bold transition-all duration-300 transform hover:scale-105">
+                    Buy Now
+                </button>
             </div>
 
             <!-- Product 7 -->
-            <div
-                class="bg-white p-5 rounded-lg shadow-md hover:shadow-2xl transition transform hover:-translate-y-2 duration-300 cursor-pointer">
-                <img src="product 3.jpg" alt="Best Seller 3 image"
-                    class="rounded-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2 cursor-pointer">
-                <h1 class="font-bold text-lg mt-2">Penicillin Plant</h1>
-                <p class="text-green-600 font-semibold">BHD 6.50</p>
+            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+                <img src="product 3.jpg" alt="Succulent Plant"
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-green-700 text-center">🌵 Succulent Plant</h1>
+                <p class="text-green-600 font-medium text-center">
+                    BHD 3.00
+                </p>
+                <button
+                    class="bg-green-700 hover:bg-green-800 text-white p-2 rounded-lg mt-2 font-bold transition-all duration-300 transform hover:scale-105">
+                    Buy Now
+                </button>
             </div>
 
             <!-- Product 8 -->
-            <div
-                class="bg-white p-5 rounded-lg shadow-md hover:shadow-2xl transition transform hover:-translate-y-2 duration-300 cursor-pointer">
-                <img src="product 4.jpg" alt="Best Seller 4 image"
-                    class="rounded-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2 cursor-pointer">
-                <h1 class="font-bold text-lg mt-2">Cactus Plant</h1>
-                <p class="text-green-600 font-semibold">BHD 9.00</p>
+            <div class="transition-all duration-300 ease-in-out hover:scale-105">
+                <img src="product 4.jpg" alt="Mint Plant"
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
+                <h1 class="mt-2 font-semibold text-green-700 text-center">🌿 Mint Plant</h1>
+                <p class="text-green-600 font-medium text-center">
+                    BHD 2.50
+                </p>
+                <button
+                    class="bg-green-700 hover:bg-green-800 text-white p-2 rounded-lg mt-2 font-bold transition-all duration-300 transform hover:scale-105">
+                    Buy Now
+                </button>
             </div>
         </div>
     </section>
+
     <!--Footer-->
     <section
         class="bg-gradient-to-r from-green-400 to-green-600 mt-5 p-10 text-white flex flex-col gap-3 items-center rounded-t-lg shadow-lg">
@@ -192,8 +232,8 @@
         <div class="flex flex-col items-center gap-3 mt-5 text-sm md:hidden">
             <!-- Hidden on Medium and Larger Screens -->
             <a href="index.html" class="hover:text-yellow-300 transition duration-300">Home</a>
-            <a href="contact.html" class="hover:text-yellow-300 transition duration-300">Contact Us</a>
             <a href="product.html" class="hover:text-yellow-300 transition duration-300">Products</a>
+            <a href="contact.html" class="hover:text-yellow-300 transition duration-300">Contact Us</a>
         </div>
 
         <p class="text-sm mt-3">© 2024 Greenday.com. All rights reserved.</p>
